Fix seasons: Not stuck in winter, countdown, 20% not 0% in winter

--- a/style.css
+++ b/style.css
@@ -595,7 +595,16 @@ button:focus {
   margin-right: 8px;
 }
 
+#progress_season {
+    height: 3px;
+    width: 110px;
+    margin: 3px 0px 0px 0px;
+}
 
+#meter_season {
+    background-color: #205038;
+}
+ 
 /* MEDITATION */
 
 #ui_meditation {
